--- a/css/style.css
+++ b/css/style.css
@@ -797,7 +797,7 @@ input[type="checkbox"]:checked{
 	right: 0;
 	left: 0;
 	padding-top: 25%;
-	background: url('../images/figures/bg-image-1.png') 0 center no-repeat;
+	background: url('../images/figures/bg-image-1.png') center 0 no-repeat;
 	background-size: contain;
 }
 .rect{
